fix issue z-index in homepage

--- a/src/components/HomePage.css
+++ b/src/components/HomePage.css
@@ -1,3 +1,8 @@
 .username {
   text-transform: capitalize;
 }
+
+.intro {
+  position: absolute;
+  z-index: 2;
+}
